# PlantCatalog

./: .gitignore
backend/: Cargo.toml
backend/dbschema/: default.esdl
backend/dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql  00011.edgeql
backend/src/: config.rs  edgedb_connection.rs  main.rs
backend/src/api/: handlers.rs  routes.rs
backend/src/api/controllers/: auth_controller.rs  user_controller.rs
backend/src/common/: types.rs
backend/src/handlers/: authenticate.rs  create_user.rs  get_users.rs  mod.rs  plants.rs  users.rs
backend/src/models/: login.rs  mod.rs  plants.rs  users.rs
backend/src/models/api/: user.rs
backend/src/repositories/: user_repository.rs
backend/src/services/: auth_service.rs  user_service.rs
backend/src/utils/: auth.rs  db_utils.rs  hash_password.rs  jwt.rs  mod.rs
backend/src3/: main.rs
backend/src3/handlers/: get_users.rs  mod.rs
backend/src3/models/: users.rs
backend/src3/utils/: db_utils.rs  mod.rs
edgedb/migrations/: schema.esdl
frontend/: .eslintrc.yml  index.html  package-lock.json  package.json  panda.config.js  tsconfig.json  vite.config.ts
frontend/plantcatalog/: package-lock.json  package.json
frontend/plantcatalog/src/: App.tsx
frontend/src/: App.tsx  index.css
frontend/src/components/common/: PasswordStrength.tsx  button.tsx  card.tsx  form-label.tsx  header.tsx  heading.tsx  input.tsx  label.tsx  masthead.tsx  menu.tsx  text.tsx
frontend/src/components/context/: AuthContex.tsx  AuthContext.tsx
frontend/src/hooks/: useLocalStorage.ts  useUser.ts
frontend/src/lib/: create-style-context.tsx
(+8 files in other folders)
