[package]
name = "plant_catalog"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = { version = "0.6.20", features = ["headers"]}
bcrypt = "0.15.0"
dotenv = "0.15.0"
edgedb-derive = "0.5.1"
edgedb-protocol = "0.6.0"
edgedb-tokio = "0.5.0"
headers = "0.4.0"
jsonwebtoken = "9.1.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11.22", features = ["json"]}
serde = "1.0.189"
serde_json = "1.0.107"
tokio = { version= "1.33.0", features = ["full"]}
chrono = "0.4"

[dev-dependencies]
mockall = "0.11.4"
