[package]
name = "plant_catalog"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = { version = "0.7.5"}
bcrypt = "0.15.0"
dotenv = "0.15.0"
edgedb-derive = "0.5.1"
edgedb-protocol = "0.6.0"
edgedb-tokio = "0.5.0"
headers = "0.4.0"
jsonwebtoken = "9.1.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11.22", features = ["json"]}
serde = "1.0.189"
serde_json = "1.0.107"
tokio = { version= "1.33.0", features = ["full"]}
chrono = "0.4"
tower-http = { version= "0.5.2", features= ["cors"]}
http = "1.1.0"
hyper = "1.3.1"
time = "0.3.36"
serde_with = { version = "3.8.1", features = ["time_0_3"] }

[dev-dependencies]
mockall = "0.11.4"
